--- a/publish.css
+++ b/publish.css
@@ -1,5 +1,19 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Homemade+Apple&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Tangerine:wght@400;700&family=Walter+Turncoat&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Homemade+Apple&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Tangerine:wght@400;700&family=Walter+Turncoat&display=swap&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap");
+body {
+  --font-text-override: "??";
+  --font-interface-theme: "Poppins";
+  --font-text-theme: "Noto Serif";
+}
+
+p, li {
+  text-wrap: pretty;
+}
+
+h2, h3, h4, h5, h6 {
+  text-wrap: balance;
+}
+
 .is-mobile.theme-light,
 .theme-light {
   --color-base-00: #e7e7e7;
@@ -138,14 +152,6 @@
   font-weight: var(--font-normal);
 }
 
-p, li {
-  text-wrap: pretty;
-}
-
-h2, h3, h4, h5, h6 {
-  text-wrap: balance;
-}
-
 body {
   --button-radius: var(--radius-s);
   --caret-color: currentColor;
@@ -174,7 +180,7 @@ body {
   container: markdown-view/inline-size;
 }
 
-.markdown-rendered :is(ul, ol) {
+:where(.markdown-rendered :is(ul, ol)) {
   display: flow-root;
 }
 
@@ -6816,5 +6822,90 @@ body {
     -webkit-mask-image: radial-gradient(var(--cutout-corner-radius) at 0 var(--workspace-top-margin), transparent 100%, black), radial-gradient(var(--cutout-corner-radius) at 100% var(--workspace-top-margin), transparent 100%, black);
     -webkit-mask-composite: source-in;
     mask-composite: intersect;
+  }
+}
+.site-body-center-column {
+  background-color: var(--workleaves-background);
+}
+
+@container style(--font-text-override: "??") {
+  .published-container {
+    --font-weight: var(--font-light);
+    --bold-modifier: 300;
+  }
+  .markdown-preview-view {
+    font-weight: var(--font-weight);
+  }
+}
+.site-body-left-column {
+  background-color: var(--workspace-background);
+  padding-right: 10px;
+}
+
+.nav-view-outer {
+  position: relative;
+  scrollbar-gutter: auto;
+  flex-grow: 1;
+  background-color: var(--workleaves-background);
+  -webkit-mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) 100%, transparent 100%, black);
+  -webkit-mask-position: calc(-1 * var(--cutout-corner-radius)) calc(-1 * var(--cutout-corner-radius));
+  -webkit-mask-repeat: repeat-x;
+}
+
+.nav-view {
+  padding: var(--cutout-corner-radius);
+}
+
+.nav-view-outer::before {
+  content: "";
+  position: absolute;
+  inset: var(--cutout-outline-inset);
+  top: 0px;
+  background: var(--sidedock-inset-border-color);
+  -webkit-mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) 100%, transparent calc(100% - 1px), black calc(100% - 1px) 100%, transparent) calc(-1 * var(--cutout-corner-radius)) calc(-1 * var(--cutout-corner-radius))/auto repeat-x, linear-gradient(90deg, black 2px, transparent 0) -1px 0px/100% calc(100% - var(--cutout-corner-radius) * 2) repeat-x, linear-gradient(black 2px, transparent 0) 50% calc(100% - var(--cutout-corner-radius))/calc(100% - var(--cutout-corner-radius) * 2 + 1px) 1px no-repeat;
+  pointer-events: none;
+}
+
+.search-view-outer {
+  position: relative;
+  padding: calc(12px + var(--size-4-2));
+  padding-top: 0;
+  margin-bottom: -13px;
+  background-color: var(--workleaves-background);
+  -webkit-mask-image: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius), transparent 100%, black);
+  -webkit-mask-position: calc(-1 * var(--cutout-corner-radius)) calc(-1 * var(--cutout-corner-radius));
+  -webkit-mask-repeat: repeat-x;
+}
+
+.search-view-outer::before {
+  content: "";
+  position: absolute;
+  inset: var(--cutout-outline-inset);
+  bottom: 0;
+  background: var(--sidedock-inset-border-color);
+  -webkit-mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius), transparent calc(100% - 1px), black calc(100% - 1px) 100%, transparent) calc(-1 * var(--cutout-corner-radius)) calc(-1 * var(--cutout-corner-radius))/auto repeat-x, linear-gradient(90deg, black 2px, transparent 0) -1px 50%/100% calc(100% - var(--cutout-corner-radius) * 2 + 1px) repeat-x, linear-gradient(black 2px, transparent 0) 50% -1px/calc(100% - var(--cutout-corner-radius) * 2 + 1px) 100% no-repeat;
+  pointer-events: none;
+}
+
+body {
+  --fas-bookmark-tabs: flat; /* disable, flat, or volume */
+}
+
+@container not style(--fas-bookmark-tabs: disable) {
+  .search-view-container {
+    --background-modifier-form-field: var(--color-accent);
+    --text-normal: var(--text-on-accent);
+  }
+  .search-bar {
+    clip-path: polygon(0 0, 100% 0, 100% calc(100% - 12px), calc(100% - 12px) 100%, 12px 100%, 0 calc(100% - 12px));
+  }
+  .search-bar[type=text]::placeholder {
+    color: var(--text-faint);
+  }
+}
+@container style(--fas-bookmark-tabs: volume) {
+  .search-bar[type=text] {
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.08) 2px, rgba(255, 255, 255, 0.03) 8px, transparent 20px);
+    background-size: 100% 100%;
   }
 }
